CS59_Intellij/tests/valid/program1.dsl
/* personalized recipient */

recipient: "John", "Joe", "James", "Jessie".

Begin Template customMail:
`Dear {recipient (i)},

This is an email, personalized to you.

Sincerely,
Jeffery`
End Template.

Begin Loop, Incrementing i, Repeat 4 Times:
    Generate customMail.
End Loop.