CS59_Intellij/tests/invalid/noloopend.dsl
/* invalid: loop not terminated */
Begin Loop, Repeat recipient ("Count") Times:
    Generate mail.
    Increment i.